# Instrument-Cluster

./: README.md  main.qml
Arduino Scripts/August14/sketch_aug14a/: sketch_aug14a.ino
Arduino Scripts/sketch_aug07a/: sketch_aug07a.ino
CAN_Communication/: Makefile  complete_dbus_service.py  complete_dbus_service_test.py  real_speed_dbus_service.py  simple_dbus_service.py  simple_speed_display  simple_speed_display.cpp  simple_speed_display.moc  simple_speed_display.pro
Challenge/: README.md
GUI/ClusterUI_0805/: CMakeLists.txt  PiRacerBridge.cpp  main.cpp  main.qml  qml.qrc
Instrument-Cluster/: Kalman Filter Readme.md
Instrument-Cluster/Arduino/SpeedToCAN/: README.md  SpeedToCAN.ino
Instrument-Cluster/Documents/: ~$Milestone Presentation.pptx
Instrument-Cluster/GUI/CLuster_0827/: CMakeLists.txt  PiRacerBridge.h  build-rpi.sh  main.qml  team3@192.168.86.40
Instrument-Cluster/GUI/CLuster_0827/build-rpi/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_PiRacerBridge.cpp
Instrument-Cluster/GUI/CLuster_0827/cmake/: RPiToolchain.cmake
Instrument-Cluster/GUI/ClusterUI_0805/: CMakeLists.txt  PiRacerBridge.h  main.qml
Instrument-Cluster/GUI/ClusterUI_0814/: CMakeLists.txt  PiRacerBridge.cpp  PiRacerBridge.h  main.cpp  main.qml  qml.qrc
Instrument-Cluster/GUI/ClusterUI_0820/: CMakeLists.txt  PiRacerBridge.cpp  qml.qrc
Instrument-Cluster/GUI/scripts/: build_deploy_run.sh  sysroot_sync.sh
Instrument-Cluster/python_service/: complete_dashboard_service.py  rc_piracer.py  requirements.txt
Instrument-Cluster/python_service/Test_alpha_beta/: battery_test.py  complete_dashboard_service.py  rc_piracer.py
controller/: 0808Beck.py  gamepad_test.py  gamepad_with_gears.py  gpio_piracer.py  rc_with_real_piracer.py  rc_with_real_piracer_test.py  simple_rc_system.py  test_battery.py  universal_gamepad_test.py
controller/piracer_venv/: pyvenv.cfg
